<resources>
    <string name="app_name">My Campaign</string>
    <string name="icon">icon</string>

    <!-- inputs caracter -->
    <string name="input_only_leters_to_upper">ABCDEFGHIJKLMNÑ OPQRSTUVWXYZ</string>

    <!-- Volunteer BottomSheet  -->
    <string name="fbs_title">Registro de voluntario</string>
    <string name="fbs_step1">Paso 1 de 6</string>
    <string name="fbs_step2">Paso 2 de 6</string>
    <string name="fbs_step3">Paso 3 de 6</string>
    <string name="fbs_step4">Paso 4 de 6</string>
    <string name="fbs_step5">Paso 5 de 6</string>
    <string name="fbs_step6">Paso 6 de 6</string>
    <string name="fbs_continue">CONTINUAR</string>
    <string name="fbs_finish">FINALIZAR</string>
    <string name="fbs_snackbar">Voluntario registrado con éxito</string>

    <!-- Fragment Datos personales Volunteer BottomSheet  -->
    <string name="fpvbs_names">Nombre(s)</string>
    <string name="fpvbs_names_error">Ingrese el nombre</string>
    <string name="fpvbs_lastName1">Apellido paterno</string>
    <string name="fpvbs_lastName2">Apellido materno</string>
    <string name="fpvbs_lastName1_error">Ingrese el apellido paterno</string>
    <string name="fpvbs_lastName2_error">Ingrese el apellido materno</string>
    <string name="fpvbs_street">Calle</string>
    <string name="fpvbs_street_error">Ingrese la calle</string>
    <string name="fpvbs_complement">Número Interior (Opcional)</string>
    <string name="fpvbs_out_number">Número Exterior</string>
    <string name="fpvbs_out_number_error">Ingrese el número exterior</string>
    <string name="fpvbs_cp">Código Postal</string>
    <string name="fpvbs_cp_error">Ingrese el código postal</string>
    <string name="fpvbs_address">Domicilio</string>
    <string name="fpvbs_personal">Datos personales</string>

    <!-- Fragment Contacto Volunteer BottomSheet  -->
    <string name="fcvbs_id">Identificación</string>
    <string name="fcvbs_key">Clave de elector</string>
    <string name="fcvbs_key_error">Ingrese la clave de elector</string>
    <string name="fcvbs_contact">Contacto</string>
    <string name="fcvbs_email">Correo electrónico</string>
    <string name="fcvbs_email_error">Ingrese el correo electrónico</string>
    <string name="fcvbs_phone">Teléfono</string>
    <string name="fcvbs_phone_error">Ingrese el teléfono</string>
    <string name="fcvbs_searchSection">Búsqueda de sección</string>
    <string name="fcvbs_state">Estado</string>
    <string name="fcvbs_state_error">Ingrese un estado valido</string>
    <string name="fcvbs_section">Sección</string>
    <string name="fcvbs_section_error">Sección</string>
    <string name="fcvbs_error_1">Los datos del siguiente formulario se autorellenaran con la información de este (solo Jalisco).</string>
    <string name="fcvbs_error_2">Error al obtener los datos locales, se procedera al registro manualmente.</string>

    <!-- Fragment Seccion Volunteer BottomSheet  -->
    <string name="fsvbs_title">Identificación de la sección</string>
    <string name="fsvbs_state">Estado</string>
    <string name="fsvbs_name">Nombre</string>
    <string name="fsvbs_number">Número</string>
    <string name="fSvbs_section">Sección</string>
    <string name="fSvbs_section_error">Ingrese la sección</string>
    <string name="fSvbs_municipio">Municipio</string>
    <string name="fSvbs_municipio_name_error">Ingrese el nombre</string>
    <string name="fSvbs_municipio_number_error">Ingrese el número</string>
    <string name="fSvbs_sector">Sector</string>
    <string name="fSvbs_sector_error">Ingrese el sector</string>
    <string name="fSvbs_distrito_local">Distrito local</string>
    <string name="fSvbs_distrito_local_error">Ingrese el distrito local</string>
    <string name="fSvbs_distrito_federal">Distrito federal</string>
    <string name="fSvbs_distrito_federal_error">Ingrese el distrito federal</string>
    <string name="fpvbs_suburb_error">Ingrese la colonia</string>
    <string name="fsvbs_dlocal_title">Distrito local</string>
    <string name="fsvbs_dfederal_title">Distrito federal</string>

    <!-- Fragment otros Volunteer BottomSheet  -->
    <string name="fovbs_title">Datos finales</string>
    <string name="fovbs_notes">Ingrese aqui sus notas (opcional).</string>
    <string name="fovbs_notes_title">Notas</string>
    <string name="fovbs_section_title">Identificacion de la sección</string>
    <string name="fovbs_question_one">¿Va a cuidar la casilla en la sección donde vive?</string>
    <string name="fovbs_yes">Si</string>
    <string name="fovbs_no">No</string>
    <string name="fovbs_repre">¿Qué tipo de representante es?</string>
    <string name="fpvbs_suburb">Colonia</string>

    <!-- Main Activity  -->

    <!-- Menu activity -->
    <string name="amv_title">Registro de voluntarios</string>
    <string name="amv_opc">O</string>
    <string name="avm_take">Tomar una foto</string>
    <string name="avm_capture">Captura manual</string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu de navegacion -->
    <string name="menu_profile">Perfil</string>
    <string name="menu_volunteer">Voluntarios</string>

    <string name="aviso_privacidad">El tratamiento de los datos personales que sean recabados se realizan con fundamento en lo establecido en los artículos 6°, apartado A, fracciones I, II y IV, y 16 párrafo segundo de la Constitución Política de los Estados Unidos Mexicanos; artículos 4° y 9°, fracciones II, V y VI de la Constitución Política del Estado de Jalisco; artículos 3, fracción II, 18, 26, 27 y 28 de la Ley General de Protección de Datos Personales en Posesión de Sujetos Obligados; artículos 3, fracciones III y XXXII, 5, 10, 19, 20, 24 y 87 fracciones III y X de la Ley de Protección de Datos Personales en Posesión de Sujetos Obligados del Estado de Jalisco y sus Municipios; artículos 1, 70 y 76 de la Ley General de Transparencia y Acceso a la Información Pública; los artículos 8, 16 y 25, fracción XVIII de la Ley de Transparencia y Acceso a la Información Pública del Estado de Jalisco y sus Municipios; artículos 30 párrafo primero inciso g), 41 párrafo primero inciso c), 43 párrafo primero incisos b) y d), 44 y 63 párrafo primero inciso e) de la Ley General de Partidos Políticos; artículo 38 fracción IV del Código Electoral del Estado de Jalisco; artículos 12, 35 párrafo primero, 40, 41, 42, 43, 44, 46 y transitorio segundo de los Estatutos del partido político local FUTURO; e inciso B) de la Convocatoria para la integración de la Comisión Ejecutiva Estatal 2020–2023.\n\nLos datos personales a los cuales se les dará tratamiento para la integración de los expedientes de las personas postulantes para la convocatoria son los siguientes:\n\n" +Datos de identificación y localización. Nombre completo, edad, fotografía, lugar de residencia, correo electrónico particular, número de afiliación, registro federal de contribuyentes, estado civil, nacionalidad, domicilio, giro comercial, teléfono, clave única de registro poblacional y datos bancarios.\n\nDatos académicos, de experiencia y laborales. Carrera de estudio (institución y profesión), empleos anteriores (cargo, período e institución), publicaciones e investigaciones (tipo, medio y año de publicación).\n\nDatos para declaraciones fiscales, patrimoniales y de intereses. Nombre, nacionalidad, relación, ingresos anuales, bienes inmuebles (tipo, ubicación y valor), vehículos (tipo, registro, marca, modelo y valor), bienes muebles (tipo y valor), inversiones, cuentas bancarias y valores (tipo, ubicación, nombre entidad y saldo), participación en direcciones y consejos (nombre de la institución, ubicación, actividad económica, tipo de participación y monto anual), participación accionaria (nombre de la institución, ubicación, antigüedad, porcentaje de participación), préstamos, créditos y obligaciones (nombre de acreedor, tipo, monto original y actual), posiciones y cargos (nombre de la institución, cargo, duración y monto anual), intereses diversos (nombre de la institución, cargo y vigencia), viajes financiados (nombre de financiador, fecha de viaje, ubicación y valor de viaje), patrocinios, cortesías y donativos (nombre de donante, propósito y valor).\n\nDatos sensibles. Firma y fotografía.\n\nLos datos personales son recabados directamente del titular de los datos salvo aquellos terceros involucrados en las declaraciones patrimoniales y de intereses; por lo que la persona que entregue datos personales de terceros deberá de notificar a sus titulares este aviso de privacidad previo al aprovechamiento de sus datos personales.\n\nLos datos personales son recabados para las siguientes finalidades: Suscribir su intención de participar en la convocatoria abierta a la Comisión Ejecutiva Estatal de Futuro; Compartir con la militancia sus versiones públicas de las declaraciones patrimoniales, de interés y fiscal de los interesados en participar en la convocatoria; Compartir con la militancia el resto de documentación enviada para participar en la convocatoria abierta a la Comisión Ejecutiva Estatal de Futuro; Servir como fin informativo para la Asamblea General a efecto de que esta pueda decidir su voto para la conformación de la Comisión Ejecutiva Estatal; Llevar el registro público de los padrones de proveedores y gastos relacionados a honorarios, prestación de servicios, asesorías y comunicación social que son requeridos por la Ley General de Transparencia y Acceso a la Información Pública, y la Ley de Transparencia y Acceso a la Información Pública del Estado de Jalisco y sus Municipios; así como la elaboración de los contratos para dar certeza jurídica de la relación que se establecerá.\n\nFinalidades secundarias: para fines estadísticos, de envío de información, de contacto directo, de creación, invitación, colaboración, de elaboración y desarrollo de análisis de datos y de directorios en términos colectivos o demográficos.\n\nSi usted NO desea que sus datos personales sean tratados para las finalidades secundarias señaladas, o alguna de ellas, puede negarnos su consentimiento desde este momento enviándonos su solicitud al correo electrónico: transparencia@mycampaign.mx. Su negativa no será motivo para dejar de contactarles y realizar las demás finalidades.\n</string>

</resources>