<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fovbs_title"
        android:textColor="@android:color/black"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="56dp"
        android:paddingEnd="16dp"
        android:text="¿Va a cuidar la casilla en la sección donde esta su credencial de elector?"
        android:textColor="@android:color/black"
        android:visibility="visible" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="56dp"
        android:paddingEnd="16dp"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/btn_radio_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/fovbs_yes" />

        <RadioButton
            android:id="@+id/btn_radio_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:gravity="center_vertical"
            android:text="@string/fovbs_no" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="56dp"
        android:paddingEnd="16dp"
        android:text="@string/fovbs_repre"
        android:textColor="@android:color/black"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:orientation="vertical"
        android:paddingStart="56dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <RadioButton
            android:id="@+id/btn_voting_booth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:checked="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="Representante de casilla" />

        <RadioButton
            android:id="@+id/btn_radio_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="Representante general" />

        <RadioButton
            android:id="@+id/btn_radio_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:gravity="center_vertical"
            android:text="Otro" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fovbs_notes_title"
        android:textColor="@android:color/black"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

    <!-- Field with image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_notes"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_notes_24"
            android:tint="@color/black"
            android:contentDescription="@string/icon"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/icon_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/fovbs_notes"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:inputType="textMultiLine|textCapSentences"
                android:singleLine="false"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

</LinearLayout>