<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fcvbs_id"
        android:textColor="@android:color/black"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

    <!-- Field with image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_electoral_key"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_outline_account_box_24"
            android:tint="@color/black"
            android:contentDescription="@string/icon"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_electoral_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/icon_electoral_key"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/fcvbs_key"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fcvbs_contact"
        android:textColor="@android:color/black"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

    <!-- Field with image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_outline_email_24"
            android:tint="@color/black"
            android:contentDescription="@string/icon"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/icon_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/fcvbs_email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <!-- Field with image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_phone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_outline_phone_24"
            android:tint="@color/black"
            android:contentDescription="@string/icon"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/icon_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/fcvbs_phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyt_search_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/fcvbs_searchSection"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

        <!-- Field without image -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/fcvbs_state"
            android:paddingStart="56dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_sections"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/fcvbs_section"
            android:paddingStart="56dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:dropDownAnchor="@id/lyt_sections"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>