<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomsheets.VolunteerBottomSheet">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/volunteer_bs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:contentDescription="@string/icon"
                android:minWidth="48dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_sharp_close_24" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fbs_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

                <TextView
                    android:id="@+id/txt_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Paso 1 de 4"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_edit_prev"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:contentDescription="@string/icon"
                android:minWidth="48dp"
                android:src="@drawable/ic_baseline_chevron_left_24" />

            <ImageButton
                android:id="@+id/btn_edit_next"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:contentDescription="@string/icon"
                android:minWidth="48dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_chevron_right_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:visibility="gone"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/fbs_continue" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/volunteer_bs_toolbar"
        android:id="@+id/volunteer_bs_nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/volunteer_bs_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@android:layout/simple_gallery_item" />

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>